--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -19,7 +19,7 @@
     height: 100%;
     justify-content: space-evenly;
     img {
-      width: 45rem;
+      width: 50%;
       margin: 0.5rem;
     }
     .contacto__formulario {
