--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -6,6 +6,7 @@
     margin: 0 auto;
     height: 35rem;
     width: 35rem;
+    padding: 0.5rem;
   }
 }
 
@@ -86,6 +87,8 @@
         border-radius: 5rem;
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         margin: 0.3rem;
         height: 100%;
         padding: 2rem;
