--- a/scss/_tienda.scss
+++ b/scss/_tienda.scss
@@ -2,6 +2,7 @@
   font-family: "Rampart One", cursive;
   color: #5c855c;
   background-image: url(https://image.freepik.com/vector-gratis/fondo-hoja-cannabis-botanico_23-2148787839.jpg);
+  background-position: revert;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
