--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -82,6 +82,10 @@
     div {
       width: 100%;
       padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       .podio {
         border: dotted 0.3rem #5c855c;
         border-radius: 5rem;
