--- a/scss/_guias.scss
+++ b/scss/_guias.scss
@@ -24,9 +24,11 @@
     text-align: start;
     font-size: 2.3rem;
     font-style: italic;
+    padding: 1rem;
     li {
       margin: 2rem;
-      a {
+      width: 100%;
+            a {
         text-decoration: none;
         color: #5c855c;
         padding: 1rem;
@@ -49,10 +51,13 @@
   .opcionManual {
     padding: 1rem;
     display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgba(123, 209, 66, 0.192);
 
     img {
       width: 35%;
+      height: 40%;
     }
     p {
       padding: 2rem;
